# opencv_mcc_example

./: CMakeLists.txt  README.md
src/: main.cpp
